compiler/testData/diagnostics/tests/cyclicHierarchy/classInheritsNested.kt
open class E : <!CYCLIC_INHERITANCE_HIERARCHY!>E.EE<!>() {
    open class EE
}
